--- a/src/components/work/BeautifulProjects.module.scss
+++ b/src/components/work/BeautifulProjects.module.scss
@@ -1,5 +1,9 @@
 @use "../../components/breakpoints.scss" as breakpoints;
 
+.container {
+  /* Simple container styling */
+}
+
 .costcutsCard {
   position: relative;
   overflow: hidden;
